[tool.poetry]
name = "graphql-core"
version = "3.3.0a3"
description = """\
GraphQL-core is a Python port of GraphQL.js,\
 the JavaScript reference implementation for GraphQL."""
license = "MIT"
authors = ["Christoph Zwerschke <cito@online.de>"]
readme = "README.md"
homepage = "https://github.com/graphql-python/graphql-core"
repository = "https://github.com/graphql-python/graphql-core"
documentation = "https://graphql-core-3.readthedocs.io/"
keywords = ["graphql"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
packages = [
    { include = "graphql", from = "src" },
    { include = "tests", format = "sdist" },
    { include = "docs", format = "sdist" },
    { include = ".bumpversion.cfg", format = "sdist" },
    { include = ".editorconfig", format = "sdist" },
    { include = ".flake8", format = "sdist" },
    { include = ".readthedocs.yaml", format = "sdist" },
    { include = "poetry.lock", format = "sdist" },
    { include = "tox.ini", format = "sdist" },
    { include = "CODEOWNERS", format = "sdist" },
    { include = "SECURITY.md", format = "sdist" }
]

[tool.poetry.urls]
Changelog = "https://github.com/graphql-python/graphql-core/releases"

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = [
    { version = "^4.5", python = "<3.10" }
]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3"
pytest-asyncio = ">=0.21,<1"
pytest-benchmark = "^4.0"
pytest-cov = "^4.1"
pytest-describe = "^2.1"
pytest-timeout = "^2.1"
tox = [
    { version = ">=4.5,<5", python = ">=3.8" },
    { version = ">=3.28,<4", python = "<3.8" }
]

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "23.3.0"
flake8 = [
    { version = ">=5,<7", python = ">=3.8.1" },
    { version = ">=5,<6", python = "<3.8.1" }
]
flake8-bandit = "^4.1"
flake8-bugbear = [
    { version = "23.5.9", python = ">=3.8.1" },
    { version = "23.3.12", python = "<3.8.1" },
]
isort = [
    { version = "^5.12", python = ">=3.8" },
    { version = "^5.11", python = "<3.8" }
]
mypy = "1.3.0"
bump2version = ">=1.0,<2"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
sphinx = [
    { version = ">=4,<7", python = ">=3.8" },
    { version = ">=4,<6", python = "<3.8" }
]
sphinx_rtd_theme = ">=1,<2"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.black]
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.coverage.run]
branch = true
source = ["src", "tests"]
omit = [
    "*/conftest.py",
    "*/test_*_fuzz.py",
    "*/assert_valid_name.py",
    "*/cached_property.py",
    "*/character_classes.py",
    "*/is_iterable.py",
    "*/subscription/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError:",
    "# Python <",
    "raise NotImplementedError",
    'raise TypeError\(f?"Unexpected',
    "assert False,",
    '\s+next\($',
    "if MYPY:",
    "if TYPE_CHECKING:",
    '^\s+\.\.\.$',
    '^\s+pass$'
]
ignore_errors = true

[tool.isort]
src_paths = ["src", "tests"]
skip_glob = ["src/**/__init__.py"]
profile = "black"
force_single_line = false
lines_after_imports = 2

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "graphql.pyutils.frozen_dict",
    "graphql.pyutils.frozen_list",
    "graphql.type.introspection",
    "tests.*"
]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.3"
# Only run benchmarks as tests.
# To actually run the benchmarks, use --benchmark-enable on the command line.
# To run the slow tests (fuzzing), add --run-slow on the command line.
addopts = "--benchmark-disable"
# Deactivate default name pattern for test classes (we use pytest_describe).
python_classes = "PyTest*"
# Handle all async fixtures and tests automatically by asyncio
asyncio_mode = "auto"
# Set a timeout in seconds for aborting tests that run too long.
timeout = "100"
# Ignore config options not (yet) available in older Python versions.
filterwarnings = "ignore::pytest.PytestConfigWarning"

[build-system]
requires = ["poetry_core>=1.6,<2"]
build-backend = "poetry.core.masonry.api"
